// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> renders correctly with no text 1`] = `
<div
  className="SearchBar"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  <div
    className="search-bar-inner-div"
  >
    <SearchBarButton
      content={<Unknown />}
      id="search-bar-search-button"
      onClick={[Function]}
      title="Search"
    />
    <Connect(SearchBarInput)
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    />
  </div>
</div>
`;

exports[`<SearchBar /> renders correctly with text 1`] = `
<div
  className="SearchBar"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  <div
    className="search-bar-inner-div"
  >
    <SearchBarButton
      content={<Unknown />}
      id="search-bar-search-button"
      onClick={[Function]}
      title="Search"
    />
    <Connect(SearchBarInput)
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    />
    <SearchBarButton
      content={<Unknown />}
      id="search-bar-clear-button"
      onClick={[Function]}
      title="Clear"
    />
  </div>
</div>
`;
